[tool.poetry]
name = "Ember"
version = "0.1.0-dev"
authors = ["Matt Riggott <matt.riggott@gmail.com>"]
description = "Web server for map tiles stored in MBTiles files"
license = "MIT"
readme = "README.md"
repository = "https://github.com/flother/ember"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers"
]
packages = [{ include = "ember", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.6.2"
starlette = "^0.17.0"
uvicorn = "^0.16.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ember = "ember.server:run"
